--- a/idumban-apparels/src/styles/home.scss
+++ b/idumban-apparels/src/styles/home.scss
@@ -1,10 +1,171 @@
 .navbar{
-    background-color: #ededeb;
+    background-color: #444444;
+
+    
+    a{
+        color: white;
+        font-family: 'Poppins', sans-serif;
+    }
+    .navbar-brand{
+        font-size: 22px;
+        display: flex;
+        align-items: center;
+
+        span{
+            margin-left: 15px;
+        }
+    }
+    .nav-link{
+        font-size: 20px;
+    }
+    .navbar-toggler .navbar-toggler-icon {
+        color: white;
+    }
 
     @media screen and (min-width: 768px) {
         li {
-            color: lightgreen;
-            margin-right: 20px;
+            margin-right: 30px;
         } 
     }
+    .offcanvas{
+        background-color: #888888;
+    }
 }
+
+.navbar-offset{
+    margin-top: 99px;
+}
+
+
+.max-width{
+    width: 100%;
+}
+
+@mixin flex-column-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-container{
+
+    .first-section{
+        height: calc(100vh - 99px);
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+        max-width: 40;
+        padding-right: 7%;
+        
+        @media screen and (max-width: 1200px) {
+            height: calc(80vh - 99px);
+            align-items: center;
+            padding: 0 10px 0 10px;
+            
+        }
+        .text-container{
+            @include flex-column-center;
+            text-align: center;
+            gap: 10px;
+            color: #444444;
+            h1{
+                margin-bottom: 50px;
+                font-family: 'Montserrat', sans-serif;
+                font-size: 4.5rem;
+
+                @media screen and (max-width: 992px) {
+                    max-width: 750px;
+                }
+            }
+            h2{
+                font-family: 'Poppins', serif;
+                font-size: 2.8rem;
+                font-weight: 400;
+            }
+            h4{
+                font-family: 'Poppins', sans-serif;
+                font-size: 2.2rem;
+            }
+        }
+    }
+    .second-section{
+        @include flex-column-center;
+        min-height: 40vh;
+        background-color: #eeeeee;
+        z-index: -2;
+
+        @media screen and (max-width: 1100px) {
+            padding: 100px 10px 100px 10px;
+        }
+
+        .content-container{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            .text-container{
+                text-align: center;
+                max-width: 800px;
+                color: #444444;
+                h2{
+                    font-size: 3rem;
+                    font-family: 'Montserrat', sans-serif;
+                    font-weight: 500;
+                }
+                h4{
+                    margin-top: 30px;
+                    font-family: sans-serif;
+                    font-weight: 300;
+                }
+                @media screen and (max-width: 768px) {
+                    h2{
+                        max-width: 600px;
+                    }
+                }
+            }
+            .icon-container{
+                @include flex-column-center;
+                height: 200px;
+                width: 200px;
+                background-color: #666666;
+
+                position: relative;
+
+                img{
+                    position: absolute;
+                    top: calc(50% + 10px);
+                    left: calc(50% - 10px);
+                    transform: translate(-50%, -50%);
+                    width: 100px;
+                    height: 100px;
+                    z-index: 3;
+                }
+                div{
+                    position: absolute;
+                    top: 10px;
+                    right: 10px;
+                    width: 100%;
+                    height: 100%;
+                    background-color: white;
+                    display: block;
+                    border: 2px solid #666666;
+                    z-index: 2;
+                }
+                @media screen and (max-width: 768px) {
+
+                }
+            }
+           
+            @media screen and (max-width: 1100px) {
+                flex-direction: column;
+                align-items: center;
+                gap: 60px;
+                
+            }
+        }
+
+    }
+}
+
