--- a/idumban-apparels/src/styles/home.scss
+++ b/idumban-apparels/src/styles/home.scss
@@ -93,22 +93,24 @@
     }
     .second-section{
         @include flex-column-center;
-        min-height: 40vh;
+        min-height: 50vh;
         background-color: #eeeeee;
         z-index: -2;
-
-        @media screen and (max-width: 1100px) {
-            padding: 100px 10px 100px 10px;
-        }
+        padding: 100px 10px 100px 10px;
 
         .content-container{
             display: flex;
             flex-direction: row;
             justify-content: space-evenly;
+            flex-wrap: wrap;
+            align-items: center;
+
             .text-container{
                 text-align: center;
                 max-width: 800px;
                 color: #444444;
+                text-align: center;
+
                 h2{
                     font-size: 3rem;
                     font-family: 'Montserrat', sans-serif;
@@ -125,47 +127,66 @@
                     }
                 }
             }
-            .icon-container{
-                @include flex-column-center;
-                height: 200px;
-                width: 200px;
-                background-color: #666666;
+            .icons-container{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                max-width: 500px;
+                justify-content: center;
+                flex-wrap: wrap;
+                gap: 50px;
 
-                position: relative;
+                .icon {
+                    @include flex-column-center;
+                    height: 200px;
+                    width: 200px;
+                    background-color: #666666;
+                    position: relative;
 
-                img{
-                    position: absolute;
-                    top: calc(50% + 10px);
-                    left: calc(50% - 10px);
-                    transform: translate(-50%, -50%);
-                    width: 100px;
-                    height: 100px;
-                    z-index: 3;
-                }
-                div{
-                    position: absolute;
-                    top: 10px;
-                    right: 10px;
-                    width: 100%;
-                    height: 100%;
-                    background-color: white;
-                    display: block;
-                    border: 2px solid #666666;
-                    z-index: 2;
-                }
-                @media screen and (max-width: 768px) {
 
+
+                    img{
+                        position: absolute;
+                        top: calc(50% + 10px);
+                        left: calc(50% - 10px);
+                        transform: translate(-50%, -50%);
+                        width: 100px;
+                        height: 100px;
+                        z-index: 3;
+                    }
+                    div{
+                        position: absolute;
+                        top: 10px;
+                        right: 10px;
+                        width: 100%;
+                        height: 100%;
+                        background-color: white;
+                        display: block;
+                        border: 3px solid #666666;
+                        z-index: 2;
+                    }
                 }
+
             }
            
-            @media screen and (max-width: 1100px) {
+            @media screen and (max-width: 1350px) {
                 flex-direction: column;
-                align-items: center;
                 gap: 60px;
-                
             }
         }
 
+    }
+    .section3-container{
+        .carousel {
+            max-width:50%
+             /* set the height of the carousel container */
+          }
+          
+          .carousel-item img {
+            width: 100%; /* set the width of the images within the carousel to 100% */
+            height: 100%; /* set the height of the images within the carousel to 100% */
+            object-fit: cover; /* ensure the image covers the entire carousel item */
+          }
     }
 }
 
