--- a/idumban-apparels/src/styles/home.scss
+++ b/idumban-apparels/src/styles/home.scss
@@ -107,7 +107,6 @@
 
             .text-container{
                 text-align: center;
-                max-width: 800px;
                 color: #444444;
                 text-align: center;
 
@@ -117,8 +116,9 @@
                     font-weight: 500;
                 }
                 h4{
-                    margin-top: 30px;
+                    margin-top: 50px;
                     font-family: sans-serif;
+                    max-width: 800px;
                     font-weight: 300;
                 }
                 @media screen and (max-width: 768px) {
@@ -177,16 +177,60 @@
 
     }
     .section3-container{
+        @include flex-column-center;
+        background: linear-gradient(to bottom, #eeeeee, #bbbbbb);
+        // background: linear-gradient(-45deg, #555555, #eeeeee);
         .carousel {
-            max-width:50%
-             /* set the height of the carousel container */
-          }
+            width:80%;
+            padding: 10px;
+
+            @media screen and (max-width: 2000px) {
+                width: 85%;
+            }
+            @media screen and (max-width: 1750px) {
+                width: 90%;
+            }
+            @media screen and (max-width: 1500px) {
+                width: 100%;
+            }
+            .carousel-item img{
+                border-radius: 30px;
+            }
+            .carousel-caption {
+                margin-bottom: 1.5%;
+            }
           
-          .carousel-item img {
-            width: 100%; /* set the width of the images within the carousel to 100% */
-            height: 100%; /* set the height of the images within the carousel to 100% */
-            object-fit: cover; /* ensure the image covers the entire carousel item */
-          }
+        }
+
+    }
+    .section4-container{
+        @include flex-column-center;
+        min-height: 60vh;
+        background-color: #888888;
+        .content-container{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+
+            .graphic{
+                max-width: 400px;
+                height: 600px;
+                text-align: center;
+                border-radius: 10px;
+                color: #333333;
+                border: 2px solid #666666;
+
+                img{
+                    border-top-left-radius: 10px;
+                    border-top-right-radius: 10px;
+                }
+                p{
+                    font-family: sans-serif;
+                    font-size: 1.2rem;
+                }
+            }
+        }
     }
 }
 
